@@ -1,6 +1,8 @@
 v1.3 (XXXX-XX-XX)
 -----------------
 
+* make AQL REVERSE() function work on strings, too
+
 * disabled DOT generation in `make doxygen`. this speeds up docs generation
 
 * renamed startup option `--dispatcher.report-intervall` to `--dispatcher.report-interval`
